# foc2

./: .gitignore  .mxproject  CMakeLists.txt  README.md  foc2.code-workspace  foc2.ioc
Doc/: ENCODER_USAGE.md  MKS_DUAL_FOC_V3.2_PLUS_PINOUT.md  MOTOR1_TEST_GUIDE.md  QUICK_START.md
Inc/: foc.h  main.h  stm32g4xx_it.h
Inc/drv/: adc_dma.h  can.h  i2c_scan.h  mt6701.h  oled.h  pwm.h  uart_in.h
Src/: foc.c  init.c  main.c  stm32g4xx_it.c  syscalls.c  sysmem.c  system_stm32g4xx.c  usb_device.c  usbd_desc.c
Src/drv/: adc_dma.c  can.c  i2c_scan.c  mt6701.c  oled.c  pwm.c  uart_in.c
Src/sys/: stm32g4xx_hal_msp.c  stm32g4xx_it.c  syscalls.c
Src/usb/: usbd_cdc_if.c  usbd_conf.c
cmake/: toolchain.cmake
cmake/stm32cubemx/: CMakeLists.txt
